Merged in bug/CAP-428_employee-card-type-filter (pull request #214)
CAP428 - employee without cards were not displayed

* CAP428 - employee without cards were not displayed


Approved-by: Slava Akimov